Restoring fix for route names overflowing .componet in Safari for iOS
Fixes #7473

--- a/assets/app/styles/_components.less
+++ b/assets/app/styles/_components.less
@@ -88,6 +88,8 @@
         .flex-direction(@direction: row);
       }
       .component {
+        // so that Safari for iOS properly truncates
+        width: 100%;
         @media (min-width: @screen-md-min) {
           // assign flex properties when >=992 for proper layout so that .component no longer stack; % on flex-basis value necessary for IE
           .flex(@columns: 2 0 0%);
